--- a/roles/apt/defaults/main.yml
+++ b/roles/apt/defaults/main.yml
@@ -3,13 +3,15 @@ apt:
   all_update_flag: True
   all_upgrade_flag: True
   packages:
-    - name: python-apt
-    - name: vim
-    - name: wget
-    - name: apache2
-    - name: php
-    - name: php-mysql
-    - name: php-gd
-    - name: php-mbstring
-    - name: mysql-server
-    - name: python-mysqldb
+    - name: mosquitto
+    - name: mosquitto-clients
+    # - name: python-apt
+    # - name: vim
+    # - name: wget
+    # - name: apache2
+    # - name: php
+    # - name: php-mysql
+    # - name: php-gd
+    # - name: php-mbstring
+    # - name: mysql-server
+    # - name: python-mysqldb
