--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,18 +1,20 @@
 ---
+- name: update cache
+  apt:
+    update_cache: yes
+    # upgrade: dist
+  when: apt.all_update_flag
+
 - name: upgrade all packages
   apt:
     name: '*'
     state: latest
-  when: apt.all_upgrade_flag 
-
-- name: update all packages
-  apt:
-    upgrade: dist
-  when: apt.all_update_flag
+  when: apt.all_upgrade_flag
 
 - name: install apt packages
   apt:
     name: '{{ item.name }}'
     state: '{{ item.state | default("present") }}'
-    update_cache: yes
+    # update_cache: yes
   with_items: '{{ apt.packages }}'
+  when: apt.packages is defined
