--- a/hosts.sample
+++ b/hosts.sample
@@ -1,2 +1,8 @@
 [raspberry-pi]
 XX.XX.XX.XX # set your environment
+
+[all:vars]
+ansible_ssh_port=22
+ansible_ssh_user=pi
+ansible_ssh_pass=raspberry
+ansible_sudo_pass=raspberry
