--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -16,5 +16,6 @@
     name: '{{ item.name }}'
     state: '{{ item.state | default("present") }}'
     # update_cache: yes
+    cache_valid_time: 3600
   with_items: '{{ apt.packages }}'
   when: apt.packages is defined
